[gd_scene load_steps=17 format=3 uid="uid://c38fl22da0jew"]

[ext_resource type="Script" path="res://gameplay/test_gameplay/training_bot.gd" id="1_qefqv"]
[ext_resource type="PackedScene" uid="uid://c1rmwwn7hjq3i" path="res://effects/my_explosion_fx.tscn" id="2_3j0dd"]
[ext_resource type="ArrayMesh" uid="uid://bsrxmndxpa0gm" path="res://assets/gunmech_actual.obj" id="3_pxub6"]
[ext_resource type="Material" uid="uid://cr3o3nwa7xg1b" path="res://materials/generic_toon.tres" id="4_j6s1e"]
[ext_resource type="PackedScene" uid="uid://bln8cdsrflypy" path="res://mechbody_systems/flight_module.tscn" id="6_f3m75"]
[ext_resource type="PackedScene" uid="uid://dyycpms0kxsgm" path="res://gameplay/damage/health_module.tscn" id="8_27lgs"]
[ext_resource type="PackedScene" uid="uid://c8k6oppug00w8" path="res://gameplay/test_gameplay/damage_fx.tscn" id="9_s1n2a"]
[ext_resource type="AudioStream" uid="uid://b0hek6a22ax66" path="res://assets/audio/269064__mickboere__jet-loop-01.wav" id="10_0joy1"]
[ext_resource type="PackedScene" uid="uid://cwma8an75pj1" path="res://mechbody_systems/target_lead/lead_computer.tscn" id="11_6hi4e"]
[ext_resource type="PackedScene" uid="uid://crm8horlgc4d6" path="res://gameplay/combat/weapons_detection/weapons/gunbase.tscn" id="11_oegaf"]
[ext_resource type="PackedScene" uid="uid://bucnla8x27yb0" path="res://gameplay/combat/weapons_detection/weapons/poolbullet_shooter.tscn" id="12_k4fmq"]
[ext_resource type="PackedScene" uid="uid://c6s483834v703" path="res://gameplay/combat/weapons_detection/weapons/smartbullet_shooter.tscn" id="12_t5gte"]
[ext_resource type="PackedScene" uid="uid://2cpstgfnw41v" path="res://gameplay/damage/slicing/sliceable_component.tscn" id="13_f5gqh"]
[ext_resource type="PackedScene" uid="uid://c6xgg2ks7x84e" path="res://gameplay/damage/hurtbox.tscn" id="14_innue"]
[ext_resource type="PackedScene" uid="uid://bgks2vibbp02y" path="res://npc/npcs/turret/turret_enemy.tscn" id="15_ghbwf"]

[sub_resource type="SphereShape3D" id="SphereShape3D_2g2oc"]
radius = 3.0

[node name="TrainingBot" type="RigidBody3D" node_paths=PackedStringArray("gun") groups=["SensorDetect", "enemy"]]
collision_layer = 2
collision_mask = 2
mass = 100.0
gravity_scale = 0.0
can_sleep = false
script = ExtResource("1_qefqv")
impulse = 1000.0
gun = NodePath("GunBase")

[node name="explosion" parent="." instance=ExtResource("2_3j0dd")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="." groups=["SensorDetect"]]
shape = SubResource("SphereShape3D_2g2oc")

[node name="mechmesh" type="MeshInstance3D" parent="."]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0, 0, 2.28429)
mesh = ExtResource("3_pxub6")
surface_material_override/0 = ExtResource("4_j6s1e")

[node name="looker" type="Node3D" parent="."]

[node name="FlightModule" parent="." node_paths=PackedStringArray("mechbody") instance=ExtResource("6_f3m75")]
mechbody = NodePath("..")
enabled = true

[node name="FlightModule2" parent="." node_paths=PackedStringArray("mechbody") instance=ExtResource("6_f3m75")]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
mechbody = NodePath("..")
enabled = true

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 8.67582, -3.72842)
visible = false
text = "dasfe"
font_size = 200

[node name="HealthModule" parent="." instance=ExtResource("8_27lgs")]
health = 10

[node name="DamageFx" parent="." instance=ExtResource("9_s1n2a")]
transform = Transform3D(0.000283132, 0.00794356, 0.999968, -0.00163949, 0.999967, -0.00794309, -0.999999, -0.00163718, 0.000296158, 0, 0, 0)

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("10_0joy1")
unit_size = 47.74
max_db = 6.0
autoplay = true
doppler_tracking = 2

[node name="LeadComputer" parent="." node_paths=PackedStringArray("launching_body", "muzzle_reference") instance=ExtResource("11_6hi4e")]
launching_body = NodePath("..")
muzzle_reference = NodePath("../GunBase/Muzzle")
projectile_velocity = 800.0

[node name="GunBase" parent="." node_paths=PackedStringArray("shooter", "launching_rigidbody", "muzzle") instance=ExtResource("11_oegaf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3.52435)
shooter = NodePath("PoolbulletShooter")
launching_rigidbody = NodePath("..")
muzzle = NodePath("Muzzle")
cycle_time = 5.0

[node name="Muzzle" type="Marker3D" parent="GunBase"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.61358)

[node name="PoolbulletShooter" parent="GunBase" instance=ExtResource("12_k4fmq")]

[node name="SmartbulletShooter" parent="GunBase" instance=ExtResource("12_t5gte")]

[node name="SliceableComponent" parent="." node_paths=PackedStringArray("rigidbody", "meshinstance") instance=ExtResource("13_f5gqh")]
rigidbody = NodePath("..")
meshinstance = NodePath("../mechmesh")

[node name="Hurtbox" parent="." node_paths=PackedStringArray("health") instance=ExtResource("14_innue")]
health = NodePath("../HealthModule")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hurtbox"]
shape = SubResource("SphereShape3D_2g2oc")

[node name="TurretEnemy" parent="." instance=ExtResource("15_ghbwf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.81061, 0.0500708)

[connection signal="health_changed" from="HealthModule" to="." method="_on_health_module_health_changed"]
[connection signal="health_zero" from="HealthModule" to="." method="_on_health_module_health_zero"]
