[gd_scene load_steps=15 format=3 uid="uid://cdgfmtvu50t1c"]

[ext_resource type="Script" path="res://gameplay/test_gameplay/training_bot.gd" id="1_voulj"]
[ext_resource type="PackedScene" uid="uid://prpquffa8bgi" path="res://effects/explosion_fx.tscn" id="2_piwu0"]
[ext_resource type="ArrayMesh" uid="uid://bsrxmndxpa0gm" path="res://assets/gunmech_actual.obj" id="3_msw3y"]
[ext_resource type="Material" uid="uid://byl3yi4rdb1c0" path="res://materials/smoke_cloud_material.tres" id="5_cho7r"]
[ext_resource type="PackedScene" uid="uid://bln8cdsrflypy" path="res://mechbody_systems/flight_module.tscn" id="6_cp1qy"]
[ext_resource type="PackedScene" uid="uid://bisjoacj4bgel" path="res://gameplay/mechtools/enemystupidgun.tscn" id="7_qb8t7"]
[ext_resource type="PackedScene" uid="uid://dyycpms0kxsgm" path="res://gameplay/test_gameplay/health_module.tscn" id="8_4s8e3"]
[ext_resource type="PackedScene" uid="uid://c8k6oppug00w8" path="res://gameplay/test_gameplay/damage_fx.tscn" id="9_qygb4"]
[ext_resource type="AudioStream" uid="uid://b0hek6a22ax66" path="res://assets/audio/269064__mickboere__jet-loop-01.wav" id="10_bqxs0"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_7b3bx"]
friction = 0.01

[sub_resource type="SphereShape3D" id="SphereShape3D_2g2oc"]
radius = 3.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_f7lbk"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_wigt3"]
inherit_velocity_ratio = 0.818
spread = 180.0
initial_velocity_min = 5.0
initial_velocity_max = 10.0
gravity = Vector3(0, 0, 0)
scale_min = 0.5

[sub_resource type="SphereMesh" id="SphereMesh_ciiej"]
material = ExtResource("5_cho7r")

[node name="TrainingBotGround" type="RigidBody3D" node_paths=PackedStringArray("gun") groups=["SensorDetect"]]
collision_layer = 34
collision_mask = 34
mass = 100.0
physics_material_override = SubResource("PhysicsMaterial_7b3bx")
can_sleep = false
script = ExtResource("1_voulj")
impulse = 20.0
slerp_speed = 4
gun = NodePath("enemygun")

[node name="explosionFX" parent="." instance=ExtResource("2_piwu0")]
boom_delay = 0.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="." groups=["SensorDetect"]]
shape = SubResource("SphereShape3D_2g2oc")

[node name="mechmesh" type="MeshInstance3D" parent="."]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0, 0, 2.28429)
mesh = ExtResource("3_msw3y")
surface_material_override/0 = SubResource("StandardMaterial3D_f7lbk")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_2g2oc")

[node name="GPUParticles3D" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00523853, 0.00969791, 0.0013938)
emitting = false
amount = 20
explosiveness = 1.0
randomness = 0.5
process_material = SubResource("ParticleProcessMaterial_wigt3")
draw_pass_1 = SubResource("SphereMesh_ciiej")

[node name="looker" type="Node3D" parent="."]

[node name="FlightModule" parent="." node_paths=PackedStringArray("mechbody") instance=ExtResource("6_cp1qy")]
mechbody = NodePath("..")
enabled = true

[node name="FlightModule2" parent="." node_paths=PackedStringArray("mechbody") instance=ExtResource("6_cp1qy")]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
mechbody = NodePath("..")
enabled = true

[node name="enemygun" parent="." node_paths=PackedStringArray("launching_rigidbody") instance=ExtResource("7_qb8t7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -5.64543)
launching_rigidbody = NodePath("..")

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 8.67582, -3.72842)
visible = false
text = "dasfe"
font_size = 200

[node name="HealthModule" parent="." instance=ExtResource("8_4s8e3")]
health = 100

[node name="DamageFx" parent="." instance=ExtResource("9_qygb4")]
transform = Transform3D(0.000283132, 0.00794356, 0.999968, -0.00163949, 0.999967, -0.00794309, -0.999999, -0.00163718, 0.000296158, 0, 0, 0)

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("10_bqxs0")
unit_size = 47.74
max_db = 6.0
autoplay = true
doppler_tracking = 2

[connection signal="explosion_ended" from="explosionFX" to="." method="_on_explosion_fx_explosion_ended"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_shooter_timer_timeout"]
[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="health_zero" from="HealthModule" to="." method="_on_health_module_health_zero"]
